SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1038504

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -12,6 +12,7 @@ X-KDE-Weight=200
 Name=Contact Actions
 Name[en_GB]=Contact Actions
 Name[es]=Acciones de contactos
+Name[et]=Kontaktitoimingud
 Name[gl]=Accións de contacto
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
@@ -24,6 +25,7 @@ Name[x-test]=xxContact Actionsxx
 Comment=Configure the Contact Actions
 Comment[en_GB]=Configure the Contact Actions
 Comment[es]=Configurar las acciones de contactos
+Comment[et]=Kontaktitoimingute seadistamine
 Comment[gl]=Configurar as accións de contacto
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
