--- a/gpgme++/GpgmeppConfig.cmake.in
+++ b/gpgme++/GpgmeppConfig.cmake.in
@@ -1,28 +1,28 @@
 set( GPGMEPP_INCLUDES "@GPGMEPP_INCLUDE@" )
 
-include( "@LIB_INSTALL_DIR@/Gpgmepp/GpgmeppLibraryDepends.cmake" )
+include( "@LIB_INSTALL_DIR@/gpgmepp/GpgmeppLibraryDepends.cmake" )
 
 set( GPGMEPP_VANILLA_FOUND @HAVE_GPGME_VANILLA@ )
 if ( GPGMEPP_VANILLA_FOUND )
   set( GPGMEPP_VANILLA_LIBRARIES "@GPGMEPP_VANILLA_LIBRARY@" )
-endif ( GPGMEPP_VANILLA_LIBRARY )
+endif ( GPGMEPP_VANILLA_FOUND )
 
 set( GPGMEPP_PTHREAD_FOUND @HAVE_GPGME_PTHREAD@ )
 if ( GPGMEPP_PTHREAD_FOUND )
   set( GPGMEPP_PTHREAD_LIBRARIES "@GPGMEPP_PTHREAD_LIBRARY@" )
-endif ( GPGMEPP_PTHREAD_LIBRARY )
+endif ( GPGMEPP_PTHREAD_FOUND )
 
 set( GPGMEPP_PTH_FOUND @HAVE_GPGME_PTH@ )
 if ( GPGMEPP_PTH_FOUND )
   set( GPGMEPP_PTH_LIBRARIES "@GPGMEPP_PTH_LIBRARY@" )
-endif ( GPGMEPP_PTH_LIBRARY )
+endif ( GPGMEPP_PTH_FOUND )
 
 set( GPGMEPP_QT_FOUND @HAVE_GPGME_QT@ )
 if ( GPGMEPP_QT_FOUND )
   set( GPGMEPP_QT_LIBRARIES "@GPGMEPP_QT_LIBRARY@" )
-endif ( GPGMEPP_QT_LIBRARY )
+endif ( GPGMEPP_QT_FOUND )
 
 set( GPGMEPP_GLIB_FOUND @HAVE_GPGME_GLIB@ )
 if ( GPGMEPP_GLIB_FOUND )
   set( GPGMEPP_GLIB_LIBRARIES "@GPGMEPP_GLIB_LIBRARY@" )
-endif ( GPGMEPP_GLIB_LIBRARY )
+endif ( GPGMEPP_GLIB_FOUND )
