SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1046626

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -22,6 +22,7 @@ Name[sv]=Kontaktåtgärder
 Name[tr]=Kişi Eylemleri
 Name[uk]=Дії контакту
 Name[x-test]=xxContact Actionsxx
+Name[zh_TW]=聯絡人動作
 Comment=Configure the Contact Actions
 Comment[en_GB]=Configure the Contact Actions
 Comment[es]=Configurar las acciones de contactos
@@ -35,4 +36,5 @@ Comment[sv]=Anpassa kontaktåtgärder
 Comment[tr]=Kişi Eylemlerini Yapılandır
 Comment[uk]=Налаштування дій для контакту
 Comment[x-test]=xxConfigure the Contact Actionsxx
+Comment[zh_TW]=設定聯絡人動作
 X-KDE-Keywords=kaddressbook, configure, settings, contact, actions
