SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1051371

--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -89,7 +89,7 @@ Comment[sr@latin]=Podešavanje resursa KDE‑a
 Comment[sv]=Anpassa KDE-resurser
 Comment[th]=ปรับแต่งทรัพยากร KDE
 Comment[tr]=KDE Kaynaklarını Yapılandır
-Comment[uk]=Налаштувати ресурси KDE
+Comment[uk]=Налаштування ресурсів даних KDE
 Comment[x-test]=xxConfigure KDE Resourcesxx
 Comment[zh_CN]=配置 KDE 资源
 Comment[zh_TW]=設定 KDE 資源
