Refactored SpecialCollections/SpecialCollectionsRequestJob to be type agnostic.
Introduced SpecialMailCollections/SpecialMailCollectionsRequestJob
as email specific special collections classes.

Note: the unit tests are disabled for now, they are too ugly to port

svn path=/trunk/KDE/kdepimlibs/; revision=1051484

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -129,6 +129,10 @@ set( akonadikde_LIB_SRC
   selftestdialog.cpp
   session.cpp
   servermanager.cpp
+  specialcollectionattribute.cpp
+  specialcollections.cpp
+  specialcollectionshelperjobs.cpp
+  specialcollectionsrequestjob.cpp
   standardactionmanager.cpp
   statisticsproxymodel.cpp
   subscriptionjob.cpp
@@ -261,6 +265,8 @@ install( FILES
   selectionproxymodel.h
   session.h
   servermanager.h
+  specialcollections.h
+  specialcollectionsrequestjob.h
   standardactionmanager.h
   statisticsproxymodel.h
   transactionjobs.h
