Build and use the KDescendantsProxyModel in kdepimlibs.
svn path=/trunk/KDE/kdepimlibs/; revision=1054168

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -111,6 +111,7 @@ set( akonadikde_LIB_SRC
   itemsync.cpp
   itemview.cpp
   job.cpp
+  kdescendantsproxymodel.cpp
   linkjob.cpp
   mimetypechecker.cpp
   monitor.cpp
