--- a/akonadi/contact/CMakeLists.txt
+++ b/akonadi/contact/CMakeLists.txt
@@ -39,6 +39,7 @@ set(akonadicontact_editor_SRCS
 set(akonadicontact_LIB_SRC
   attributeregistrar.cpp
   collectionfiltermodel.cpp
+  ../kdescendantsproxymodel.cpp
   contactcompletionmodel.cpp
   contactdefaultactions.cpp
   contacteditor.cpp
