windows doesn't understand ' on commandline
svn path=/trunk/KDE/kdepimlibs/; revision=1054894

--- a/akonadi/kmime/tests/CMakeLists.txt
+++ b/akonadi/kmime/tests/CMakeLists.txt
@@ -8,11 +8,11 @@ remove_definitions( -DQT_NO_CAST_FROM_ASCII )
 remove_definitions( -DQT_NO_CAST_TO_ASCII )
 
 set( requester_srcs foldersrequester.cpp )
-kde4_add_executable( requester TEST ${requester_srcs} )
+kde4_add_executable( requester TEST "${requester_srcs}" )
 target_link_libraries( requester akonadi-kmime akonadi-kde ${KDE4_KDEUI_LIBS})
 # for racetest
-set( requester_exe "QLatin1String( \"${CMAKE_CURRENT_BINARY_DIR}/requester\" )" )
-add_definitions( -DREQUESTER_EXE='${requester_exe}' )
+set(requester_exe_string "QLatin1String( \\\"${CMAKE_CURRENT_BINARY_DIR}/requester\\\" )" )
+add_definitions( -DREQUESTER_EXE="${requester_exe_string}" )
 
 
 
