--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -11,6 +11,7 @@ X-KDE-Weight=200
 
 Name=Contact Actions
 Name[cs]=Činnosti kontaktů
+Name[da]=Kontakthandlinger
 Name[en_GB]=Contact Actions
 Name[es]=Acciones de contactos
 Name[et]=Kontaktitoimingud
@@ -26,6 +27,7 @@ Name[x-test]=xxContact Actionsxx
 Name[zh_TW]=聯絡人動作
 Comment=Configure the Contact Actions
 Comment[cs]=Nastavit činnosti kontaktů
+Comment[da]=Indstil kontakthandlinger
 Comment[en_GB]=Configure the Contact Actions
 Comment[es]=Configurar las acciones de contactos
 Comment[et]=Kontaktitoimingute seadistamine
