Make the EntityRightsFilterModel public in the porting branch.
svn path=/branches/work/akonadi-ports/kdepimlibs/; revision=1056682

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -236,8 +236,7 @@ install( FILES
   entityhiddenattribute.h
   entitylistview.h
   entitymimetypefiltermodel.h
-# Made private in 4.4 -- Stephen Kelly.
-#  entityrightsfiltermodel.h
+  entityrightsfiltermodel.h
   entitytreemodel.h
   entitytreeview.h
   entitytreeviewstatesaver.h
@@ -260,6 +259,7 @@ install( FILES
   itemview.h
   job.h
   linkjob.h
+  krecursivefilterproxymodel.h
   mimetypechecker.h
   monitor.h
   partfetcher.h
