[akonadi/CMakeLists.txt] Do not pass string when condition is expected (KDE_IS_AT_LEAST_42)
svn path=/trunk/KDE/kdepimlibs/; revision=1056870

--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -177,11 +177,11 @@ macro_ensure_version( "4.2.0" ${KDE_VERSION} KDE_IS_AT_LEAST_42 )
 target_link_libraries( akonadi-kde ${KDE4_SOLID_LIBS} ${QT_QTNETWORK_LIBRARY} ${QT_QTDBUS_LIBRARY} ${QT_QTSQL_LIBRARY} ${KDE4_KDEUI_LIBS} ${KDE4_KIO_LIBS} ${AKONADI_COMMON_LIBRARIES} )
 set( AKONADI_KDE_DEPS ${KDE4_KDEUI_LIBS} ${QT_QTDBUS_LIBRARY} ${QT_QTCORE_LIBRARY} )
 
-if(${KDE_IS_AT_LEAST_42})
+if(KDE_IS_AT_LEAST_42)
 target_link_libraries( akonadi-kde LINK_INTERFACE_LIBRARIES ${AKONADI_KDE_DEPS})
-else(${KDE_IS_AT_LEAST_42})
+else(KDE_IS_AT_LEAST_42)
 target_link_libraries( akonadi-kde ${AKONADI_KDE_DEPS})
-endif(${KDE_IS_AT_LEAST_42})
+endif(KDE_IS_AT_LEAST_42)
 
 
 set_target_properties( akonadi-kde PROPERTIES VERSION ${GENERIC_LIB_VERSION} SOVERSION ${GENERIC_LIB_SOVERSION} )
