SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1061273

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -12,6 +12,7 @@ X-KDE-Weight=200
 Name=Contact Actions
 Name[cs]=Činnosti kontaktů
 Name[da]=Kontakthandlinger
+Name[de]=Kontakt-Aktionen
 Name[en_GB]=Contact Actions
 Name[es]=Acciones de contactos
 Name[et]=Kontaktitoimingud
@@ -28,6 +29,7 @@ Name[zh_TW]=聯絡人動作
 Comment=Configure the Contact Actions
 Comment[cs]=Nastavit činnosti kontaktů
 Comment[da]=Indstil kontakthandlinger
+Comment[de]=Kontakt-Aktionen einrichten
 Comment[en_GB]=Configure the Contact Actions
 Comment[es]=Configurar las acciones de contactos
 Comment[et]=Kontaktitoimingute seadistamine
