Move KCal::MimeTypeVisitor to kdepimlibs/kcal. It is used all over the place and thus breaks apps/runtime separation in kdepim.
svn path=/branches/work/akonadi-ports/kdepimlibs/; revision=1061280

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -82,6 +82,7 @@ set(kcal_LIB_SRCS ${libversit_SRCS}
   assignmentvisitor.cpp
   comparisonvisitor.cpp
   calhelper.cpp
+  mimetypevisitor.cpp
 )
 
 kde4_add_kcfg_files(kcal_LIB_SRCS htmlexportsettings.kcfgc )
@@ -181,6 +182,7 @@ install( FILES
         vcalformat.h
         kresult.h
         calhelper.h
+        mimetypevisitor.h
         DESTINATION ${INCLUDE_INSTALL_DIR}/kcal COMPONENT Devel)
 
 install( FILES kcal_manager.desktop  DESTINATION ${SERVICES_INSTALL_DIR}/kresources)
