--- a/akonadi/tests/testresource/knutresource.desktop
+++ b/akonadi/tests/testresource/knutresource.desktop
@@ -1,11 +1,13 @@
 [Desktop Entry]
 Name=Knut
+Name[ar]=Knut
 Name[ca]=Knut
 Name[cs]=Knut
 Name[da]=Knut
 Name[de]=Knut
 Name[el]=Knut
 Name[en_GB]=Knut
+Name[eo]=Knut
 Name[es]=Knut
 Name[et]=Knut
 Name[fr]=Knut
@@ -36,6 +38,7 @@ Name[x-test]=xxKnutxx
 Name[zh_CN]=Knut
 Name[zh_TW]=Knut
 Comment=An agent for debugging purpose
+Comment[ar]=أداة لتصحيح الأخطاء
 Comment[ca]=Un agent amb la finalitat de depuració
 Comment[da]=En agent til fejlretningsformål
 Comment[de]=Agent für Zwecke der Fehlersuche
