SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1061907

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -16,6 +16,7 @@ Name[de]=Kontakt-Aktionen
 Name[en_GB]=Contact Actions
 Name[es]=Acciones de contactos
 Name[et]=Kontaktitoimingud
+Name[fr]=Actions sur les contacts
 Name[gl]=Accións de contacto
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
@@ -33,6 +34,7 @@ Comment[de]=Kontakt-Aktionen einrichten
 Comment[en_GB]=Configure the Contact Actions
 Comment[es]=Configurar las acciones de contactos
 Comment[et]=Kontaktitoimingute seadistamine
+Comment[fr]=Configurer les actions sur les contacts
 Comment[gl]=Configurar as accións de contacto
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
