--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -12,9 +12,11 @@ X-KDE-Weight=200
 Name=Contact Actions
 Name[cs]=Činnosti kontaktů
 Name[da]=Kontakthandlinger
+Name[de]=Kontakt-Aktionen
 Name[en_GB]=Contact Actions
 Name[es]=Acciones de contactos
 Name[et]=Kontaktitoimingud
+Name[fr]=Actions sur les contacts
 Name[gl]=Accións de contacto
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
@@ -28,9 +30,11 @@ Name[zh_TW]=聯絡人動作
 Comment=Configure the Contact Actions
 Comment[cs]=Nastavit činnosti kontaktů
 Comment[da]=Indstil kontakthandlinger
+Comment[de]=Kontakt-Aktionen einrichten
 Comment[en_GB]=Configure the Contact Actions
 Comment[es]=Configurar las acciones de contactos
 Comment[et]=Kontaktitoimingute seadistamine
+Comment[fr]=Configurer les actions sur les contacts
 Comment[gl]=Configurar as accións de contacto
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
