--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -4,9 +4,11 @@ X-KDE-ServiceType=Kontact/Plugin
 Name=Kontact Plugin
 Name[cs]=Modul aplikace Kontact
 Name[da]=Kontact-plugin
+Name[de]=Kontact-Modul
 Name[en_GB]=Kontact Plugin
 Name[es]=Complemento de Kontact
 Name[et]=Kontacti plugin
+Name[fr]=Module externe pour Kontact
 Name[ga]=Breiseán Kontact
 Name[gl]=Engadido de Kontact
 Name[nb]=Kontact-programtillegg
