--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -43,7 +43,7 @@ Name[zh_TW]=KResources 管理者
 Type=ServiceType
 X-KDE-ServiceType=KResources/Manager
 Comment=KResources Manager
-Comment[ca]=Gestor del KResources
+Comment[ca]=Gestió del KResources
 Comment[cs]=KResource správce
 Comment[da]=KResources-håndtering
 Comment[de]=Ressourcenverwaltung
