SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1064232

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -27,6 +27,7 @@ Name[sv]=Kontaktåtgärder
 Name[tr]=Kişi Eylemleri
 Name[uk]=Дії контакту
 Name[x-test]=xxContact Actionsxx
+Name[zh_CN]=联系人动作
 Name[zh_TW]=聯絡人動作
 Comment=Configure the Contact Actions
 Comment[ca]=Configura les accions del contacte
@@ -46,5 +47,6 @@ Comment[sv]=Anpassa kontaktåtgärder
 Comment[tr]=Kişi Eylemlerini Yapılandır
 Comment[uk]=Налаштування дій для контакту
 Comment[x-test]=xxConfigure the Contact Actionsxx
+Comment[zh_CN]=配置联系人动作
 Comment[zh_TW]=設定聯絡人動作
 X-KDE-Keywords=kaddressbook, configure, settings, contact, actions
