static methods for mapping Olson zoneinfo to/from Windows timezone names. MERGE: 4.5
svn path=/branches/kdepim/enterprise4/kdepimlibs/; revision=1066072

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -256,6 +256,7 @@ set(kcal_LIB_SRCS ${libversit_SRCS} ${libical_SRCS} ${libicalss_SRCS}
    assignmentvisitor.cpp
    comparisonvisitor.cpp
    calhelper.cpp
+   tzmapping.cpp
 )
 
 kde4_add_kcfg_files(kcal_LIB_SRCS htmlexportsettings.kcfgc )
@@ -360,6 +361,7 @@ install( FILES
         vcalformat.h
         kresult.h
         calhelper.h
+        tzmapping.h
         DESTINATION ${INCLUDE_INSTALL_DIR}/kcal COMPONENT Devel)
 
 install( FILES kcal_manager.desktop  DESTINATION ${SERVICES_INSTALL_DIR}/kresources)
