Find the testrunner executables on OSX too.
svn path=/branches/work/akonadi-ports/kdepimlibs/; revision=1066756

--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -58,7 +58,11 @@ macro(add_akonadi_isolated_test _source)
     set(_testrunner ${PREVIOUS_EXEC_OUTPUT_PATH}/akonaditest)
   endif (WIN32)
   if (UNIX)
-    set(_executable ${_executable}.shell)
+    if (APPLE)
+      set(_executable ${_executable}.app/Contents/MacOS/${_name})
+    else (APPLE)
+      set(_executable ${_executable}.shell)
+    endif (APPLE)
     set(_testrunner ${_testrunner}.shell)
   endif (UNIX)
 
