SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdepimlibs/; revision=1066859

--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -37,7 +37,7 @@ Name[sr@latin]=Priključak radnog okvira k‑resursa
 Name[sv]=Insticksprogram för resurser
 Name[th]=โปรแกรมเสริมการจัดการทรัพยากร K
 Name[tr]=KResources Eklentisi
-Name[uk]=Втулок KResourc-ів
+Name[uk]=Додаток до KResources
 Name[x-test]=xxKResources Pluginxx
 Name[zh_CN]=KResource 插件
 Name[zh_TW]=KResources 外掛程式
@@ -80,7 +80,7 @@ Comment[sr@latin]=Priključak radnog okvira k‑resursa
 Comment[sv]=Insticksprogram för resursramverk
 Comment[th]=โปรแกรมเสริมเฟรมเวิร์กการจัดการทรัพยากร K
 Comment[tr]=KResources Çalışma Alanı Eklentisi
-Comment[uk]=Втулок платформи KResource
+Comment[uk]=Додаток до платформи KResources
 Comment[x-test]=xxKResources Framework Pluginxx
 Comment[zh_CN]=KResource 框架插件
 Comment[zh_TW]=KResources 框架外掛程式
