SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1068492

--- a/kcal/kcal_manager.desktop
+++ b/kcal/kcal_manager.desktop
@@ -36,6 +36,8 @@ Name[se]=Kaleandar
 Name[sk]=Kalendár
 Name[sl]=Koledar
 Name[sr]=Календар
+Name[sr@ijekavian]=Календар
+Name[sr@ijekavianlatin]=Kalendar
 Name[sr@latin]=Kalendar
 Name[sv]=Kalender
 Name[th]=ปฎิทิน
