--- a/kcal/local.desktop
+++ b/kcal/local.desktop
@@ -33,6 +33,8 @@ Name[se]=Kaleandar báikkálaš fiillas
 Name[sk]=Kalendár v lokálnom súbore
 Name[sl]=Koledar v krajevni datoteki
 Name[sr]=Календар у локалном фајлу
+Name[sr@ijekavian]=Календар у локалном фајлу
+Name[sr@ijekavianlatin]=Kalendar u lokalnom fajlu
 Name[sr@latin]=Kalendar u lokalnom fajlu
 Name[sv]=Kalender i lokal fil
 Name[th]=ปฎิทินในแฟ้มภายในระบบ
@@ -72,6 +74,8 @@ Comment[se]=Dáinna beasat kaleandarii vurkejuvvon okta báikásaš fiilan
 Comment[sk]=Poskytuje prístup ku kalendáru uloženému v jednoduchom lokálnom súbore.
 Comment[sl]=Nudi dostop do koledarja, ki je shranjen v eni sami krajevni datoteki
 Comment[sr]=Пружа приступ календару складиштеном у једном локалном фајлу
+Comment[sr@ijekavian]=Пружа приступ календару складиштеном у једном локалном фајлу
+Comment[sr@ijekavianlatin]=Pruža pristup kalendaru skladištenom u jednom lokalnom fajlu
 Comment[sr@latin]=Pruža pristup kalendaru skladištenom u jednom lokalnom fajlu
 Comment[sv]=Ger tillgång till en kalender lagrad i en enda lokal fil
 Comment[tr]=TEk bir yerel dosyada depolanmış bir takvime erişim sağlar
