--- a/kcal/localdir.desktop
+++ b/kcal/localdir.desktop
@@ -33,6 +33,8 @@ Name[se]=Kaleandar báikkálaš katalogas
 Name[sk]=Kalendár v lokálnom adresári.
 Name[sl]=Koledar v krajevnem imeniku
 Name[sr]=Календар у локалној фасцикли
+Name[sr@ijekavian]=Календар у локалној фасцикли
+Name[sr@ijekavianlatin]=Kalendar u lokalnoj fascikli
 Name[sr@latin]=Kalendar u lokalnoj fascikli
 Name[sv]=Kalender i lokal katalog
 Name[th]=ปฎิทินในไดเรกทอรีภายในระบบ
@@ -72,6 +74,8 @@ Comment[se]=Dáinna beasat kaleandarmerkošidda, vurkejuvvon okta fiilan, dihto 
 Comment[sk]=Poskytuje prístup do položiek adresára, každá uložená v jednoduchom súbore v danom adresári.
 Comment[sl]=Nudi dostop do koledarskih vnosov, ki so shranjeni vsak posebej v svoji datoteki, v danem imeniku
 Comment[sr]=Пружа приступ календарским ставкама, складиштеним у појединачним фајловима у датој фасцикли.
+Comment[sr@ijekavian]=Пружа приступ календарским ставкама, складиштеним у појединачним фајловима у датој фасцикли.
+Comment[sr@ijekavianlatin]=Pruža pristup kalendarskim stavkama, skladištenim u pojedinačnim fajlovima u datoj fascikli.
 Comment[sr@latin]=Pruža pristup kalendarskim stavkama, skladištenim u pojedinačnim fajlovima u datoj fascikli.
 Comment[sv]=Ger tillgång till kalenderobjekt, vart och ett lagrat i en enskild lokal fil, i en given katalog
 Comment[tr]=Belirli bir dizinde, her biri tek bir dosyada depolanmış takvim ögelerine erişim sağlar
