--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -42,6 +42,8 @@ Name[se]=KDE-resurssat
 Name[sk]=KDE zdroje
 Name[sl]=Viri KDE
 Name[sr]=КДЕ ресурси
+Name[sr@ijekavian]=КДЕ ресурси
+Name[sr@ijekavianlatin]=KDE resursi
 Name[sr@latin]=KDE resursi
 Name[sv]=KDE-resurser
 Name[th]=ทรัพยากร KDE
@@ -85,6 +87,8 @@ Comment[se]=Heivet KDE-resurssaid
 Comment[sk]=Konfiguruj KDE zdroje
 Comment[sl]=Nastavi vire KDE
 Comment[sr]=Подешавање ресурса КДЕ‑а
+Comment[sr@ijekavian]=Подешавање ресурса КДЕ‑а
+Comment[sr@ijekavianlatin]=Podešavanje resursa KDE‑a
 Comment[sr@latin]=Podešavanje resursa KDE‑a
 Comment[sv]=Anpassa KDE-resurser
 Comment[th]=ปรับแต่งทรัพยากร KDE
