--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -23,6 +23,10 @@ Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
 Name[pt]=Acções do Contacto
 Name[pt_BR]=Ações do contatos
+Name[sr]=Радње са контактима
+Name[sr@ijekavian]=Радње са контактима
+Name[sr@ijekavianlatin]=Radnje sa kontaktima
+Name[sr@latin]=Radnje sa kontaktima
 Name[sv]=Kontaktåtgärder
 Name[tr]=Kişi Eylemleri
 Name[uk]=Дії контакту
@@ -43,6 +47,10 @@ Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
 Comment[pt]=Configurar as Acções do Contacto
 Comment[pt_BR]=Configura as ações do contato
+Comment[sr]=Подесите радње са контактима
+Comment[sr@ijekavian]=Подесите радње са контактима
+Comment[sr@ijekavianlatin]=Podesite radnje sa kontaktima
+Comment[sr@latin]=Podesite radnje sa kontaktima
 Comment[sv]=Anpassa kontaktåtgärder
 Comment[tr]=Kişi Eylemlerini Yapılandır
 Comment[uk]=Налаштування дій для контакту
