--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -32,6 +32,8 @@ Name[se]=KResources-gieđahalli
 Name[sk]=KResources manažér
 Name[sl]=Upravnik KResources
 Name[sr]=Менаџер к‑ресурса
+Name[sr@ijekavian]=Менаџер к‑ресурса
+Name[sr@ijekavianlatin]=Menadžer k‑resursa
 Name[sr@latin]=Menadžer k‑resursa
 Name[sv]=Resurshantering
 Name[th]=ตัวจัดการทรัพยากร
@@ -75,6 +77,8 @@ Comment[se]=KResources-gieđahalli
 Comment[sk]=KResources manažér
 Comment[sl]=Upravnik KResources
 Comment[sr]=Менаџер к‑ресурса
+Comment[sr@ijekavian]=Менаџер к‑ресурса
+Comment[sr@ijekavianlatin]=Menadžer k‑resursa
 Comment[sr@latin]=Menadžer k‑resursa
 Comment[sv]=Resurshantering
 Comment[th]=ตัวจัดการทรัพยากร K
