--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -32,6 +32,8 @@ Name[se]=KResources-lassemodula
 Name[sk]=KResources zásuvný modul
 Name[sl]=Vstavek KResources
 Name[sr]=Прикључак радног оквира к‑ресурса
+Name[sr@ijekavian]=Прикључак радног оквира к‑ресурса
+Name[sr@ijekavianlatin]=Priključak radnog okvira k‑resursa
 Name[sr@latin]=Priključak radnog okvira k‑resursa
 Name[sv]=Insticksprogram för resurser
 Name[th]=โปรแกรมเสริมการจัดการทรัพยากร K
@@ -74,6 +76,8 @@ Comment[ru]=Модуль инфраструктуры KResource
 Comment[sk]=KResources Framework zásuvný modul
 Comment[sl]=Vstavek za ogrodje KResources
 Comment[sr]=Прикључак радног оквира к‑ресурса
+Comment[sr@ijekavian]=Прикључак радног оквира к‑ресурса
+Comment[sr@ijekavianlatin]=Priključak radnog okvira k‑resursa
 Comment[sr@latin]=Priključak radnog okvira k‑resursa
 Comment[sv]=Insticksprogram för resursramverk
 Comment[th]=โปรแกรมเสริมเฟรมเวิร์กการจัดการทรัพยากร K
