--- a/mailtransport/kcm_mailtransport.desktop
+++ b/mailtransport/kcm_mailtransport.desktop
@@ -45,6 +45,8 @@ Name[se]=E-boastta fievrridanvuohki
 Name[sk]=Mail Transport
 Name[sl]=Prenos pošte
 Name[sr]=Транспорт поште
+Name[sr@ijekavian]=Транспорт поште
+Name[sr@ijekavianlatin]=Transport pošte
 Name[sr@latin]=Transport pošte
 Name[sv]=E-postöverföring
 Name[th]=โปรแกรมรับ/ส่งเมล
