--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -17,6 +17,7 @@ add_definitions( -DQT_NO_CAST_FROM_ASCII )
 add_definitions( -DQT_NO_CAST_TO_ASCII )
 
 add_subdirectory( kabc )
+add_subdirectory( kcal )
 add_subdirectory( kmime )
 add_subdirectory( contact )
 
