SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1070678

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -19,6 +19,7 @@ Name[es]=Acciones de contactos
 Name[et]=Kontaktitoimingud
 Name[fr]=Actions sur les contacts
 Name[gl]=Accións de contacto
+Name[lv]=Kontaktu darbības
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
 Name[pt]=Acções do Contacto
@@ -43,6 +44,7 @@ Comment[es]=Configurar las acciones de contactos
 Comment[et]=Kontaktitoimingute seadistamine
 Comment[fr]=Configurer les actions sur les contacts
 Comment[gl]=Configurar as accións de contacto
+Comment[lv]=Konfigurēt kontaktu darbības
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
 Comment[pt]=Configurar as Acções do Contacto
