SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.4/kdepimlibs/; revision=1071573

--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -19,6 +19,7 @@ Name[es]=Acciones de contactos
 Name[et]=Kontaktitoimingud
 Name[fr]=Actions sur les contacts
 Name[gl]=Accións de contacto
+Name[it]=Azioni per i contatti
 Name[lv]=Kontaktu darbības
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
@@ -44,6 +45,7 @@ Comment[es]=Configurar las acciones de contactos
 Comment[et]=Kontaktitoimingute seadistamine
 Comment[fr]=Configurer les actions sur les contacts
 Comment[gl]=Configurar as accións de contacto
+Comment[it]=Configua le azioni per i contatti
 Comment[lv]=Konfigurēt kontaktu darbības
 Comment[nb]=Sett opp kontakthandlinger
 Comment[nds]=Kontakt-Akschonen instellen
