SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.3/kdepimlibs/; revision=1072383

--- a/kcal/kcal_manager.desktop
+++ b/kcal/kcal_manager.desktop
@@ -3,6 +3,7 @@
 Name=Calendar
 Name[be]=Каляндар
 Name[ca]=Calendari
+Name[ca@valencia]=Calendari
 Name[cs]=Kalendář
 Name[da]=Kalender
 Name[de]=Kalender
