--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -11,6 +11,7 @@ X-DocPath=kcontrol/kresources/index.html
 Name=KDE Resources
 Name[be]=Рэсурсы KDE
 Name[ca]=Recursos del KDE
+Name[ca@valencia]=Recursos del KDE
 Name[cs]=Zdroje KDE
 Name[da]=KDE-ressourcer
 Name[de]=KDE-Ressourcen
@@ -55,6 +56,7 @@ Name[zh_TW]=KDE 資源
 Comment=Configure KDE Resources
 Comment[be]=Настаўленні рэсурсаў KDE
 Comment[ca]=Configura els recursos del KDE
+Comment[ca@valencia]=Configura els recursos del KDE
 Comment[cs]=Nastavení zdrojů KDE
 Comment[da]=Indstil KDE-ressourcer
 Comment[de]=KDE-Ressourcen einrichten
