--- a/mailtransport/kcm_mailtransport.desktop
+++ b/mailtransport/kcm_mailtransport.desktop
@@ -14,6 +14,7 @@ X-KDE-CfgDlgHierarchy=
 Name=Mail Transport
 Name[be]=Паштовы транспарт
 Name[ca]=Transport de correu
+Name[ca@valencia]=Transport de correu
 Name[cs]=Přenos pošty
 Name[da]=Mail-transport
 Name[de]=Versandart
