--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -11,6 +11,7 @@ X-KDE-Weight=200
 
 Name=Contact Actions
 Name[ca]=Accions del contacte
+Name[ca@valencia]=Accions del contacte
 Name[cs]=Činnosti kontaktů
 Name[da]=Kontakthandlinger
 Name[de]=Kontakt-Aktionen
@@ -37,6 +38,7 @@ Name[zh_CN]=联系人动作
 Name[zh_TW]=聯絡人動作
 Comment=Configure the Contact Actions
 Comment[ca]=Configura les accions del contacte
+Comment[ca@valencia]=Configura les accions del contacte
 Comment[cs]=Nastavit činnosti kontaktů
 Comment[da]=Indstil kontakthandlinger
 Comment[de]=Kontakt-Aktionen einrichten
