--- a/kcal/localdir.desktop
+++ b/kcal/localdir.desktop
@@ -2,6 +2,7 @@
 Name=Calendar in Local Directory
 Name[be]=Каляндар у мясцовай тэчцы
 Name[ca]=Calendari en un directori local
+Name[ca@valencia]=Calendari en un directori local
 Name[cs]=Kalendář v místním adresáři
 Name[da]=Kalender i lokal mappe
 Name[de]=Kalender in lokalem Ordner
@@ -45,6 +46,7 @@ Name[zh_CN]=本地目录中的日历
 Name[zh_TW]=本地端目錄裡的行事曆
 Comment=Provides access to calendar items, each stored in a single file, in a given directory
 Comment[ca]=Proporciona l'accés als elements d'un calendari, cada un emmagatzemat en un fitxer individual, en un directori proporcionat
+Comment[ca@valencia]=Proporciona l'accés als elements d'un calendari, cada un emmagatzemat en un fitxer individual, en un directori proporcionat
 Comment[cs]=Poskytuje přístup k položkám kalendáře, každé uložené v jednom souboru v daném adresáři
 Comment[da]=Giver adgang til kalenderelementer, hver lagret i en enkelt fil, i en given mappe
 Comment[de]=Ermöglicht Zugriff auf Kalender, die jeweils in einzelnen Dateien in einem vorgegebenen Ordner gespeichert sind
