--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -3,6 +3,7 @@ Type=ServiceType
 X-KDE-ServiceType=Kontact/Plugin
 Name=Kontact Plugin
 Name[ca]=Connector pel Kontact
+Name[ca@valencia]=Connector pel Kontact
 Name[cs]=Modul aplikace Kontact
 Name[da]=Kontact-plugin
 Name[de]=Kontact-Modul
