--- a/akonadi/CMakeLists.txt
+++ b/akonadi/CMakeLists.txt
@@ -237,8 +237,7 @@ install( FILES
   entityhiddenattribute.h
   entitylistview.h
   entitymimetypefiltermodel.h
-# Made private in 4.4 -- Stephen Kelly.
-#  entityrightsfiltermodel.h
+  entityrightsfiltermodel.h
   entitytreemodel.h
   entitytreeview.h
   entitytreeviewstatesaver.h
@@ -261,6 +260,7 @@ install( FILES
   itemview.h
   job.h
   linkjob.h
+  krecursivefilterproxymodel.h
   mimetypechecker.h
   monitor.h
   partfetcher.h
