--- a/kcal/tests/CMakeLists.txt
+++ b/kcal/tests/CMakeLists.txt
@@ -86,40 +86,45 @@ FILE( GLOB_RECURSE compatFiles     data/Compat/*.ics )
 FILE( GLOB_RECURSE vCalFilesAsIcal data/vCalendar/*.ics )
 FILE( GLOB_RECURSE vCalFiles       data/vCalendar/*.vcs )
 
+if (WIN32)
+  find_program(PERL_EXECUTABLE perl)
+endif (WIN32)
+
+macro(kcal_run_single_test _prefix _file _test _testarg)
+  get_filename_component( _fn ${_file} NAME)
+  set(_runner ${CMAKE_CURRENT_SOURCE_DIR}/runsingletestcase.pl)
+  if (UNIX)
+    set(_test_path ${EXECUTABLE_OUTPUT_PATH}/${_test}.shell)
+  endif (UNIX)
+  if (WIN32)
+    set(_test_path ${EXECUTABLE_OUTPUT_PATH}/${_test}.exe.bat)
+    set(_runner ${PERL_EXECUTABLE} ${_runner}) 
+  endif (WIN32)
+
+  add_test( ${_prefix}-${_fn} ${_runner} ${_test_path} ${_testarg} ${_file} )
+endmacro(kcal_run_single_test)
+
 FOREACH( file ${testFiles} )
-  GET_FILENAME_COMPONENT( fn ${file} NAME)
-  ADD_TEST( RecurNext-${fn} ${CMAKE_CURRENT_SOURCE_DIR}/runsingletestcase.pl ${EXECUTABLE_OUTPUT_PATH}/testrecurrence.shell "next" ${file} )
+  kcal_run_single_test( RecurNext ${file} testrecurrence "next" )
 ENDFOREACH(file)
 
 FOREACH( file ${testFiles} )
-  GET_FILENAME_COMPONENT( fn ${file} NAME)
-  ADD_TEST( RecurPrev-${fn} ${CMAKE_CURRENT_SOURCE_DIR}/runsingletestcase.pl ${EXECUTABLE_OUTPUT_PATH}/testrecurprevious.shell "prev" ${file} )
+  kcal_run_single_test( RecurPrev ${file} testrecurprevious "prev" )
 ENDFOREACH(file)
 
 FOREACH( file ${testFiles} )
-  GET_FILENAME_COMPONENT( fn ${file} NAME)
-  ADD_TEST( RecursOn-${fn} ${CMAKE_CURRENT_SOURCE_DIR}/runsingletestcase.pl ${EXECUTABLE_OUTPUT_PATH}/testrecurson.shell "recurson" ${file} )
+  kcal_run_single_test( RecursOn ${file} testrecurson "recurson" )
 ENDFOREACH(file)
 
 FOREACH( file ${compatFiles} )
-  GET_FILENAME_COMPONENT( fn ${file} NAME)
-  ADD_TEST( Compat-${fn} ${CMAKE_CURRENT_SOURCE_DIR}/runsingletestcase.pl ${EXECUTABLE_OUTPUT_PATH}/readandwrite.shell "ical" ${file} )
+  kcal_run_single_test( Compat ${file} readandwrite "ical" )
 ENDFOREACH(file)
 
 FOREACH( file ${vCalFilesAsIcal} )
-  GET_FILENAME_COMPONENT( fn ${file} NAME)
-  ADD_TEST( VCalOut-${fn} ${CMAKE_CURRENT_SOURCE_DIR}/runsingletestcase.pl ${EXECUTABLE_OUTPUT_PATH}/testvcalexport.shell "vcal" ${file} )
+  kcal_run_single_test( VCalOut ${file} testvcalexport "vcal" )
 ENDFOREACH(file)
 
 FOREACH( file ${vCalFiles} )
-  GET_FILENAME_COMPONENT( fn ${file} NAME)
-  ADD_TEST( VCalIn-${fn} ${CMAKE_CURRENT_SOURCE_DIR}/runsingletestcase.pl ${EXECUTABLE_OUTPUT_PATH}/readandwrite.shell "ical" ${file} )
+  kcal_run_single_test( VCalIn ${file} readandwrite "ical" )
 ENDFOREACH(file)
-
-# ADD_TEST( TestRecurrence  runtestcase.pl testrecurrence    "next" ${CMAKE_CURRENT_SOURCE_DIR} data/RecurrenceRule/ "*.ics" )
-# ADD_TEST( TestRecPrevious runtestcase.pl testrecurprevious "prev" ${CMAKE_CURRENT_SOURCE_DIR} data/RecurrenceRule/ "*.ics" )
-# ADD_TEST( TestRecursOn    runtestcase.pl testrecurson  "recurson" ${CMAKE_CURRENT_SOURCE_DIR} data/RecurrenceRule/ "*.ics" )
-# ADD_TEST( TestCompat      runtestcase.pl readandwrite      "ical" ${CMAKE_CURRENT_SOURCE_DIR} data/Compat/         "*.ics" )
-# ADD_TEST( TestVCal        runtestcase.pl testvcalexport    "vcal" ${CMAKE_CURRENT_SOURCE_DIR} data/vCalendar/      "*.ics" )
-# ADD_TEST( TestFromVCal    runtestcase.pl readandwrite      "ical" ${CMAKE_CURRENT_SOURCE_DIR} data/vCalendar/      "*.vcs" )
 
