--- a/akonadi/tests/CMakeLists.txt
+++ b/akonadi/tests/CMakeLists.txt
@@ -51,8 +51,8 @@ macro(add_akonadi_isolated_test _source)
   # based on kde4_add_unit_test
   if (WIN32)
     get_target_property( _loc ${_name} LOCATION )
-    set(_executable ${_loc}.bat)
-    set(_testrunner ${PREVIOUS_EXEC_OUTPUT_PATH}/akonaditest.bat)
+    set(_executable ${_loc}.exe.bat)
+    set(_testrunner ${PREVIOUS_EXEC_OUTPUT_PATH}/akonaditest.exe.bat)
   else (WIN32)
     set(_executable ${EXECUTABLE_OUTPUT_PATH}/${_name})
     set(_testrunner ${PREVIOUS_EXEC_OUTPUT_PATH}/akonaditest)
@@ -66,10 +66,18 @@ macro(add_akonadi_isolated_test _source)
     set(_testrunner ${_testrunner}.shell)
   endif (UNIX)
 
-  add_test( akonadi-mysql-db-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-mysql-db.xml ${_executable} )
-  add_test( akonadi-mysql-fs-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-mysql-fs.xml ${_executable} )
-  add_test( akonadi-postgresql-fs-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-postgresql-fs.xml ${_executable} )
-  add_test( akonadi-postgresql-fs-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-postgresql-fs.xml ${_executable} )
+  find_program( MYSQLD_EXECUTABLE mysqld )
+  if ( ${MYSQLD_EXECUTABLE} )
+    add_test( akonadi-mysql-db-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-mysql-db.xml ${_executable} )
+    add_test( akonadi-mysql-fs-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-mysql-fs.xml ${_executable} )
+  endif ( ${MYSQLD_EXECUTABLE} )
+
+  find_program( POSTGRES_EXECUTABLE postgres )
+  if ( ${POSTGRES_EXECUTABLE} )
+    add_test( akonadi-postgresql-db-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-postgresql-db.xml ${_executable} )
+    add_test( akonadi-postgresql-fs-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-postgresql-fs.xml ${_executable} )
+  endif ( ${POSTGRES_EXECUTABLE} )
+
   #add_test( akonadi-sqlite-${_name} ${_testrunner} -c ${CMAKE_CURRENT_SOURCE_DIR}/unittestenv/config-sqlite.xml ${_executable} )
 endmacro(add_akonadi_isolated_test)
 
